--- a/index.html
+++ b/index.html
@@ -8,8 +8,26 @@
     <link rel="stylesheet" href="CSS/style.css">
   </head>
   <body>
-    <header></header>
-    <main></main>
+    <header>
+      <section>
+        <section id="logo"></section>
+        <nav></nav>
+      </section>
+    </header>
+    <main>
+      <section id="card-match">
+        <div id="left-card" class="card left-presentation">
+          <img src="" alt="left-card-image">
+        </div>
+        <div>
+          <button id="match-button">Match</button>
+          <button id="non-match-button">Don't Match</button>
+        </div>
+        <div id="right-card" class="card right-presentation">
+          <img src="" alt="right-card-image">
+        </div>
+      </section>
+    </main>
     <footer></footer>
   </body>
   <script src="JS/app.js"></script>
