Header and Nav Bar Setup
Got the main header and nav bar positioning in place.

--- a/index.html
+++ b/index.html
@@ -10,9 +10,16 @@
   <body>
     <header>
       <section>
-        <section id="logo"></section>
-        <nav></nav>
+        <section id="logo">
+          <img src="img/MeowMatch.png" alt="MM-logo">
+        </section>
+        <nav class="horizontal-nav">
+          <a href="index.html">About Us</a>
+          <a href="index.html">Matches</a>
+          <a href="index.html">Optional</a>
+        </nav>
       </section>
+      <h1>MeowMatch</h1>
     </header>
     <main>
       <section id="card-match">
