Header, Footer, and Nav branch
Completed basic formatting and content of header, footer, and
nav bar.

--- a/aboutus.html
+++ b/aboutus.html
@@ -9,12 +9,25 @@
   </head>
   <body>
     <header>
+      <section>
+        <section id="logo">
+          <img src="img/MeowMatch.png" alt="MM-logo">
+        </section>
+        <nav class="horizontal-nav">
+          <a href="index.html">Home</a>
+          <a href="matches.html">Matches</a>
+          <a href="index.html">Optional</a>
+        </nav>
+      </section>
+      <h1>MeowMatch&trade;</h1>
+    </header>
+    <!-- <header>
       <a href="imagesChris/Screen Shot 2020-05-18 at 12.46.39 PM.png" title="meow match logo" alt="meow match logo"></a>
       <ul>
         <li><a href="index.html">Home</a></li>
         <li><a href="matches.html">Matches</a></li>
       </ul>
-    </header>
+    </header> -->
     <main>
       <h2>About Us</h2>
       <h3>Paul Rest</h3>
@@ -50,7 +63,18 @@
        <li><a href="mailto:christopherhamersly@gmail.com">Email</a></li>
       </ul>
     </main>
-    <footer>Meow Match &copy;2020</footer>
+    <footer>
+      <nav>
+        <a href="mailto: circularfile@meowmatch.com">
+          <img src="imagesChris/whiteEmail.icon.png" alt="email-icon">
+        </a>
+        <span id="footer-nav-spacer">&nbsp;</span>
+        <a href="https://www.twitter.com">
+          <img src="imagesChris/twitter.background.png" alt="twitter-icon">
+        </a>
+      </nav>
+    </footer>
+    <!-- <footer>Meow Match &copy;2020</footer> -->
   </body>
   <script src="JS/app.js"></script>
   <script src="JS/cat.js"></script>
