Added header, nav bar, and footer to matches.html and aboutus.html pages.

--- a/aboutus.html
+++ b/aboutus.html
@@ -73,6 +73,8 @@
           <img src="imagesChris/twitter.background.png" alt="twitter-icon">
         </a>
       </nav>
+      <h3>MeowMatch&trade; is a registered trademark of M&M Enterprises.</h3>
+      <h3>&copy; 2020, M&M Enterprises</h3>
     </footer>
     <!-- <footer>Meow Match &copy;2020</footer> -->
   </body>
