--- a/index.html
+++ b/index.html
@@ -19,12 +19,12 @@
           <a href="index.html">Optional</a>
         </nav>
       </section>
-      <h1>MeowMatch&trade;&copy;</h1>
+      <h1>MeowMatch&trade;</h1>
     </header>
     <main>
       <section id="intro">
         <h2>Welcome to MeowMatch&trade;!</h2>
-        <h2>MeowMatch&trade;&copy; is an exciting new website that allows you to find playmates for the bored cats in your neighborhood. Choose from among thousands&#42; of potential matches to find your perfect one. See previous matches and relive your favorite cat advnentures over and over!</h2>
+        <h2>MeowMatch&trade; is an exciting new website that allows you to find playmates for the bored cats in your neighborhood. Choose from among thousands&#42; of potential matches to find your perfect one. See previous matches and relive your favorite cat advnentures over and over!</h2>
         <p id="disclaimer">&#42;Number of available matches may vary with available profiles, how much we like you, and the phase of Venus.</p>
       </section>
       <section id="card-match">
@@ -48,7 +48,8 @@
           <img src="imagesChris/twitter.background.png" alt="twitter-icon">
         </a>
       </nav>
-      <h3>MeowMatch</h3>
+      <h3>MeowMatch&trade; is a registered trademark of M&M Enterprises.</h3>
+      <h3>&copy; 2020, M&M Enterprises</h3>
     </footer>
   </body>
   <script src="JS/app.js"></script>
