--- a/matches.html
+++ b/matches.html
@@ -22,7 +22,11 @@
       <h1>MeowMatch&trade;</h1>
     </header>
     <main>
-
+      <section id="matches-title">
+        <h1>All Matches (Newest On Top)</h1>
+      </section>
+      <section id="matches-list">
+      </section>
     </main>
     <footer>
       <nav>
@@ -34,6 +38,8 @@
           <img src="imagesChris/twitter.background.png" alt="twitter-icon">
         </a>
       </nav>
+      <h3>MeowMatch&trade; is a registered trademark of M&M Enterprises.</h3>
+      <h3>&copy; 2020, M&M Enterprises</h3>
     </footer>
   </body>
   <script src="JS/app.js"></script>
