--- a/aboutus.html
+++ b/aboutus.html
@@ -19,49 +19,48 @@
           <a href="index.html">Optional</a>
         </nav>
       </section>
-      <h1>MeowMatch&trade;</h1>
     </header>
-    <!-- <header>
-      <a href="imagesChris/Screen Shot 2020-05-18 at 12.46.39 PM.png" title="meow match logo" alt="meow match logo"></a>
-      <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="matches.html">Matches</a></li>
-      </ul>
-    </header> -->
     <main>
-      <h2>About Us</h2>
-      <h3>Paul Rest</h3>
-      <img src="imagesChris/Hair and Espresso.jpg"pauls profile pic alt="hair and espresso"></img>
-      <p>
-        I’m Paul. After years of wanting to do a coding bootcamp and it just never fitting in with life and work, I finally found the opportunity in April 2020, and took on Code Fellow’s full-time program. I am primarily interested in becoming a back-end developer, although along the way I am learning a great deal about full stack development. I have been programming to one degree or another since 2011, going so far as to build an iOS app in 2015. I have extensive customer facing experience, including in tech, and am excellent at mediating between what is possible with current technology and client expectations.
-      </p>
-      <ul>
-        <li><a href="https://github.com/paulmrest/">Github</a></li>
-        <li><a href="https://www.linkedin.com/in/paulmichaelrest/">LinkedIn</a></li>
-        <li><a href="https://www.facebook.com/paul.rest.5/">Facebook</a></li>
-        <li><a href="https://twitter.com/vaticdart">Twitter</a></li>
-      </ul>
-      <h3>Lulu Sevignon</h3>
-      <img href="imagesChris/IMG_4254 (1).png" alt="lulu profile photo" title="lul profile photo"></img>
-      <p>
-        I’m Lulu and before coming to code fellows I worked in the wine industry where I used to manage a wine club. One of my tasks was to keep the website updated. Using Wordpress, I enjoyed being able to make content changes and that experience made me want to learn how to code to be able to create websites from scratch. Here at Code Fellows I want to expand my knowledge of HTML, CSS and Javascript and become comfortable with web development. I come from a background where customer service is very important. I am now able to understand customer needs and this concept also applies to developing websites whether it is with clients or users. I’m excited to get more exposure to feedback and learn how user experience design will influence my work.
-      </p>
-      <ul>
-        <li><a href="https://github.com/luluse">Github</a></li>
-        <li><a href="https://www.linkedin.com/in/lulu-sevignon/">LinkedIn</a></li>
-        <li><a href="https://www.facebook.com/ludivine.sevignon">Facebook</a></li>
-        <li><a href="mailto:ludivine.sevignon@gmail.com">Email</a></li>
-      </ul>
-      <h3>Chris Hamersly</h3>
-      <img href="imagesChris/meow match photo.png" alt="chris' profile photo" title="chris' profile photo"></img>
-      <p>
-        I'm Chris.  Before coming to codefellows I worked as a graphic designer and traveling screen printer, criss-crossing the country many times a month. I worked hard to manage all of the moving parts that comes with working live events, all while keeping clients happy.  I had to make changes, and problem solve very quickly, and I'm really excited to explore my experience of problem solving and technology. 
-      </p>
-      <ul>
-        <li><a href="https://github.com/christopherhamersly">Github</a></li>
-        <li><a href="https://www.linkedin.com/in/christopher-hamersly/">LinkedIn</a></li>
-       <li><a href="mailto:christopherhamersly@gmail.com">Email</a></li>
-      </ul>
+      <h1 id="about-us-header">About Us</h1>
+      <section class="bio">
+        <img src="imagesChris/BioPhoto-PaulRest.jpg" alt="paul-rest-bio-photo">
+        <h3>Paul Rest</h3>
+        <p>
+          I’m Paul. After years of wanting to do a coding bootcamp and it just never fitting in with life and work, I finally found the opportunity in April 2020, and took on Code Fellow’s full-time program. I am primarily interested in becoming a back-end developer, although along the way I am learning a great deal about full stack development. I have been programming to one degree or another since 2011, going so far as to build an iOS app in 2015. I have extensive customer facing experience, including in tech, and am excellent at mediating between what is possible with current technology and client expectations.
+        </p>
+        <ul class="bio-links">
+          <li><a href="https://github.com/paulmrest/">Github</a></li>
+          <li><a href="https://www.linkedin.com/in/paulmichaelrest/">LinkedIn</a></li>
+          <li><a href="https://www.facebook.com/paul.rest.5/">Facebook</a></li>
+          <li><a href="https://twitter.com/vaticdart">Twitter</a></li>
+          <li></li>
+        </ul>
+      </section>
+      <section class="bio">
+        <img src="imagesChris/BioPhoto-LuluSevignon.png" alt="lulu-sevignon-bio-photo">
+        <h3>Lulu Sevignon</h3>
+        <p>
+          I’m Lulu and before coming to code fellows I worked in the wine industry where I used to manage a wine club. One of my tasks was to keep the website updated. Using Wordpress, I enjoyed being able to make content changes and that experience made me want to learn how to code to be able to create websites from scratch. Here at Code Fellows I want to expand my knowledge of HTML, CSS and Javascript and become comfortable with web development. I come from a background where customer service is very important. I am now able to understand customer needs and this concept also applies to developing websites whether it is with clients or users. I’m excited to get more exposure to feedback and learn how user experience design will influence my work.
+        </p>
+        <ul class="bio-links">
+          <li><a href="https://github.com/luluse">Github</a></li>
+          <li><a href="https://www.linkedin.com/in/lulu-sevignon/">LinkedIn</a></li>
+          <li><a href="https://www.facebook.com/ludivine.sevignon">Facebook</a></li>
+          <li><a href="mailto:ludivine.sevignon@gmail.com">Email</a></li>
+        </ul>
+      </section>
+      <section class="bio">
+        <img src="imagesChris/BioPhoto-ChrisHamersly.png" alt="chris-hamersly-bio-photo">
+        <h3>Chris Hamersly</h3>
+        <p>
+          I'm Chris.  Before coming to codefellows I worked as a graphic designer and traveling screen printer, criss-crossing the country many times a month. I worked hard to manage all of the moving parts that comes with working live events, all while keeping clients happy.  I had to make changes, and problem solve very quickly, and I'm really excited to explore my experience of problem solving and technology. 
+        </p>
+        <ul class="bio-links">
+          <li><a href="https://github.com/christopherhamersly">Github</a></li>
+          <li><a href="https://www.linkedin.com/in/christopher-hamersly/">LinkedIn</a></li>
+         <li><a href="mailto:christopherhamersly@gmail.com">Email</a></li>
+        </ul>
+      </section>
     </main>
     <footer>
       <nav>
