--- a/matches.html
+++ b/matches.html
@@ -15,11 +15,10 @@
         </section>
         <nav class="horizontal-nav">
           <a href="index.html">Home</a>
-          <a href="index.html">About Us</a>
+          <a href="aboutus.html">About Us</a>
           <a href="index.html">Optional</a>
         </nav>
       </section>
-      <h1>MeowMatch&trade;</h1>
     </header>
     <main>
       <section id="matches-title">
