Finished aboutus.html Page
Also made tweaks to the footer, and updated the social/email
icons that we're using.

--- a/index.html
+++ b/index.html
@@ -40,14 +40,26 @@
     <footer>
       <nav>
         <a href="mailto: circularfile@meowmatch.com">
-          <img src="imagesChris/whiteEmail.icon.png" alt="email-icon">
+          <img src="icons/email-icon.png" alt="email-icon">
+        </a>
+        <span id="footer-nav-spacer">&nbsp;</span>
+        <a href="https://www.facebook.com">
+          <img src="icons/f_logo_RGB-Blue_114.png" alt="facebook-icon">
+        </a>
+        <span id="footer-nav-spacer">&nbsp;</span>
+        <a href="https://www.instagram.com">
+          <img src="icons/Insta-glyph-logo_May2016.png" alt="instagram-icon">
         </a>
         <span id="footer-nav-spacer">&nbsp;</span>
         <a href="https://www.twitter.com">
-          <img src="imagesChris/twitter.background.png" alt="twitter-icon">
+          <img src="icons/Twitter_Social_Icon_Circle_Color.png" alt="twitter-icon">
+        </a>
+        <span id="footer-nav-spacer">&nbsp;</span>
+        <a href="https://www.linkedin.com">
+          <img src="icons/LI-In-Bug.png" alt="linkedin-icon">
         </a>
       </nav>
-      <h3>MeowMatch&trade; is a registered trademark of M&M Enterprises.</h3>
+      <h3>MeowMatch&trade; is a registered trademark of M&M Enterprises</h3>
       <h3>&copy; 2020, M&M Enterprises</h3>
     </footer>
   </body>
