--- a/matches.html
+++ b/matches.html
@@ -53,7 +53,8 @@
       <h3>&copy; 2020, M&M Enterprises</h3>
     </footer>
   </body>
-  <script src="JS/cat.js"></script>
+  <!-- <script src="JS/cat.js"></script> -->
   <script src="JS/app.js"></script>
-  <!-- <script src="JS/matches.js"></script> -->
+  <script src="JS/cat.js"></script>
+  <script src="JS/matches.js"></script>
 </html>
