--- a/matches.html
+++ b/matches.html
@@ -22,7 +22,7 @@
     </header>
     <main>
       <section id="matches-title">
-        <h1>All Matches (Newest On Top)</h1>
+        <h1>All Matches (Oldest On Top)</h1>
       </section>
       <section id="matches-list">
       </section>
@@ -53,7 +53,6 @@
       <h3>&copy; 2020, M&M Enterprises</h3>
     </footer>
   </body>
-  <!-- <script src="JS/cat.js"></script> -->
   <script src="JS/app.js"></script>
   <script src="JS/cat.js"></script>
   <script src="JS/matches.js"></script>
