--- a/index.html
+++ b/index.html
@@ -27,12 +27,18 @@
         <p id="disclaimer">&#42;Number of available matches may vary with available profiles, how much we like you, and the phase of Venus.</p>
       </section>
       <section id="card-match">
-        <div id="left-card" class="card left-presentation"></div>
+        <div id="left-card" class="card left-presentation">
+          <div id="left-card-front" class="card-front"></div>
+          <div id="left-card-back" class="card-back">Left Card Back</div>
+        </div>
         <div>
           <button id="match-button">Match</button>
-          <button id="non-match-button">Don't Match</button>
+          <button id="non-match-button">Don't Match</button>  
         </div>
-        <div id="right-card" class="card right-presentation"></div>
+        <div id="right-card" class="card right-presentation">
+          <div id="right-card-front" class="card-front"></div>
+          <div id="right-card-back" class="card-back">Right Card Back</div>
+        </div>
       </section>
     </main>
     <footer>
