--- a/aboutus.html
+++ b/aboutus.html
@@ -11,7 +11,7 @@
     <header>
       <section>
         <section id="logo">
-          <img src="img/MeowMatch.png" alt="MM-logo">
+          <img id = "logohover"src="imagesChris/MeowMatchLogo.png" alt="MM-logo">
         </section>
         <nav class="horizontal-nav">
           <a href="index.html">Home</a>
@@ -23,99 +23,100 @@
     <main>
       <h1 id="about-us-header">The Team Behind MeowMatch</h1>
       <section class="bio">
-        <h3>Paul Rest</h3>
-        <img src="imagesChris/BioPhoto-PaulRest.jpg" alt="paul-rest-bio-photo">
-        <p>
+        <h4 id="names">Paul Rest</h4>
+        <img id="paulpic" src="imagesChris/BioPhoto-PaulRest.jpg" alt="paul-rest-bio-photo">
+        <p id="bio-ppaul">
           I’m Paul. After years of wanting to do a coding bootcamp and it just never fitting in with life and work, I finally found the opportunity in April 2020, and took on Code Fellow’s full-time program. I am primarily interested in becoming a back-end developer, although along the way I am learning a great deal about full stack development. I have been programming to one degree or another since 2011, going so far as to build an iOS app in 2015. I have extensive customer facing experience, including in tech, and am excellent at mediating between what is possible with current technology and client expectations.
         </p>
         <ul class="bio-links">
           <li>
             <a href="https://github.com/paulmrest/">
-              <img src="icons/GitHub-Mark-120px-plus.png" alt="github-icon" class="icon-image">
+              <img src="imagesChris/github.logo.png" alt="github-icon" class="icon-image">
               <span class="social-link-text">GitHub</span>
             </a>
           </li>
           <li>
             <a href="https://www.linkedin.com/in/paulmichaelrest/">
-              <img src="icons/LI-In-Bug.png" alt="linkedin-icon" class="icon-image">
+              <img src="imagesChris/linkedin.logo.png" alt="linkedin-icon" class="icon-image">
               <span class="social-link-text">LinkedIn</span>
             </a>
           </li>
           <li>
             <a href="https://www.facebook.com/paul.rest.5/">
-              <img src="icons/f_logo_RGB-Blue_114.png" alt="facebook-icon" class="icon-image">
+              <img src="imagesChris/facebook.logo.color.corrected.png" alt="facebook-icon" class="icon-image">
               <span class="social-link-text">Facebook</span>
             </a>
           </li>
           <li>
             <a href="https://twitter.com/vaticdart">
-              <img src="icons/Twitter_Social_Icon_Circle_Color.png" alt="github-icon" class="icon-image">
+              <img src="imagesChris/twitter.logo.png" alt="github-icon" class="icon-image">
               <span class="social-link-text">Twitter</span>
             </a>
           </li>
           <li>
             <a href="mailto:paulmrest@gmail.com">
-              <img src="icons/email-icon.png" alt="email-icon" class="icon-image">
+              <img src="imagesChris/email.logo.png" alt="email-icon" class="icon-image">
               <span class="social-link-text">Email</span>
             </a>
           </li>
         </ul>
       </section>
       <section class="bio">
-        <h3>Lulu Sevignon</h3>
-        <img src="imagesChris/BioPhoto-LuluSevignon.png" alt="lulu-sevignon-bio-photo">
-        <p>
+        <h4 id="names">Lulu Sevignon</h4>
+        <img id="lulupic"src="imagesChris/BioPhoto-LuluSevignon.png" alt="lulu-sevignon-bio-photo">
+        <p id="bio-plulu">
           I’m Lulu and before coming to code fellows I worked in the wine industry where I used to manage a wine club. One of my tasks was to keep the website updated. Using Wordpress, I enjoyed being able to make content changes and that experience made me want to learn how to code to be able to create websites from scratch. Here at Code Fellows I want to expand my knowledge of HTML, CSS and Javascript and become comfortable with web development. I come from a background where customer service is very important. I am now able to understand customer needs and this concept also applies to developing websites whether it is with clients or users. I’m excited to get more exposure to feedback and learn how user experience design will influence my work.
         </p>
         <ul class="bio-links">
           <li>
             <a href="https://github.com/luluse">
-              <img src="icons/GitHub-Mark-120px-plus.png" alt="github-icon" class="icon-image">
+              <img src="imagesChris/github.logo.png" alt="github-icon" class="icon-image">
               <span class="social-link-text">GitHub</span>
             </a>
           </li>
           <li>
             <a href="https://www.linkedin.com/in/lulu-sevignon/">
-              <img src="icons/LI-In-Bug.png" alt="linkedin-icon" class="icon-image">
+              <img src="imagesChris/linkedin.logo.png" alt="linkedin-icon" class="icon-image">
               <span class="social-link-text">LinkedIn</span>
             </a>
           </li>
           <li>
             <a href="https://www.facebook.com/ludivine.sevignon">
-              <img src="icons/f_logo_RGB-Blue_114.png" alt="facebook-icon" class="icon-image">
+              <img src="imagesChris/facebook.logo.color.corrected.png" alt="facebook-icon" class="icon-image">
               <span class="social-link-text">Facebook</span>
             </a>
           </li>
           <li>
             <a href="mailto:ludivine.sevignon@gmail.com">
-              <img src="icons/email-icon.png" alt="email-icon" class="icon-image">
+              <img src="imagesChris/email.logo.png" alt="email-icon" class="icon-image">
               <span class="social-link-text">Email</span>
             </a>
           </li>
         </ul>
       </section>
       <section class="bio">
-        <h3>Chris Hamersly</h3>
-        <img src="imagesChris/BioPhoto-ChrisHamersly.png" alt="chris-hamersly-bio-photo">
-        <p>
+        <h4 id="names">Chris Hamersly</h4>
+        <img id="chrispic"src="imagesChris/BioPhoto-ChrisHamersly.png" alt="chris-hamersly-bio-photo">
+        <p id="bio-pchris">
           I'm Chris.  Before coming to codefellows I worked as a graphic designer and traveling screen printer, criss-crossing the country many times a month. I worked hard to manage all of the moving parts that comes with working live events, all while keeping clients happy.  I had to make changes, and problem solve very quickly, and I'm really excited to explore my experience of problem solving and technology. 
         </p>
         <ul class="bio-links">
+          
           <li>
             <a href="https://github.com/christopherhamersly">
-              <img src="icons/GitHub-Mark-120px-plus.png" alt="github-icon" class="icon-image">
+              <img src="imagesChris/github.logo.png" alt="github-icon" class="icon-image">
               <span class="social-link-text">GitHub</span>
             </a>
           </li>
           <li>
             <a href="https://www.linkedin.com/in/christopher-hamersly">
-              <img src="icons/LI-In-Bug.png" alt="linkedin-icon" class="icon-image">
+              <img src="imagesChris/linkedin.logo.png" alt="linkedin-icon" class="icon-image">
               <span class="social-link-text">LinkedIn</span>
             </a>
           </li>
           <li>
             <a href="mailto:christopherhamersly@gmail.com">
-              <img src="icons/email-icon.png" alt="email-icon" class="icon-image">
+              <img src="imagesChris/email.logo.png" alt="email-icon" class="icon-image">
               <span class="social-link-text">Email</span>
             </a>
           </li>
@@ -124,23 +125,23 @@
     <footer>
       <nav>
         <a href="mailto: circularfile@meowmatch.com">
-          <img src="icons/email-icon.png" alt="email-icon">
+          <img src="imagesChris/email.logo.png" alt="email-icon">
         </a>
         <span id="footer-nav-spacer">&nbsp;</span>
         <a href="https://www.facebook.com">
-          <img src="icons/f_logo_RGB-Blue_114.png" alt="facebook-icon">
+          <img src="imagesChris/facebook.logo.color.corrected.png" alt="facebook-icon">
         </a>
         <span id="footer-nav-spacer">&nbsp;</span>
         <a href="https://www.instagram.com">
-          <img src="icons/Insta-glyph-logo_May2016.png" alt="instagram-icon">
+          <img src="imagesChris/instagram.logo.color.corrected.png" alt="instagram-icon">
         </a>
         <span id="footer-nav-spacer">&nbsp;</span>
         <a href="https://www.twitter.com">
-          <img src="icons/Twitter_Social_Icon_Circle_Color.png" alt="twitter-icon">
+          <img src="imagesChris/twitter.logo.png" alt="twitter-icon">
         </a>
         <span id="footer-nav-spacer">&nbsp;</span>
         <a href="https://www.linkedin.com">
-          <img src="icons/LI-In-Bug.png" alt="linkedin-icon">
+          <img src="imagesChris/linkedin.logo.png" alt="linkedin-icon">
         </a>
       </nav>
       <h3>MeowMatch&trade; is a registered trademark of M&M Enterprises</h3>
