--- a/index.html
+++ b/index.html
@@ -6,12 +6,17 @@
     <title>MeowMatch</title>
     <link rel="stylesheet" href="CSS/reset.css">
     <link rel="stylesheet" href="CSS/style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@300&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@300;900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Anton&family=Nunito:wght@300;900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Bowlby+One+SC&family=Staatliches&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@300;600&display=swap" rel="stylesheet">
   </head>
   <body>
     <header>
       <section>
         <section id="logo">
-          <img src="img/MeowMatch.png" alt="MM-logo">
+          <img src="imagesChris/MeowMatchLogo.png" alt="MM-logo">
         </section>
         <nav class="horizontal-nav">
           <a href="aboutus.html">About Us</a>
@@ -22,8 +27,8 @@
     </header>
     <main>
       <section id="intro">
-        <h2>Welcome to MeowMatch&trade;!</h2>
-        <h2>MeowMatch&trade; is an exciting new website that allows you to find playmates for the bored cats in your neighborhood. Choose from among thousands&#42; of potential matches to find your perfect one. See previous matches and relive your favorite cat advnentures over and over!</h2>
+        <h2 id="welcome">Welcome to MeowMatch&trade;!</h2>
+        <h2 id="welcomeParagraph">MeowMatch&trade; is an exciting new website that allows you to find playmates for the bored cats in your neighborhood. Choose from among thousands&#42; of potential matches to find your perfect one. See previous matches and relive your favorite cat adventures over and over!</h2>
         <p id="disclaimer">&#42;Number of available matches may vary with available profiles, how much we like you, and the phase of Venus.</p>
       </section>
       <section id="card-match">
@@ -44,23 +49,23 @@
     <footer>
       <nav>
         <a href="mailto: circularfile@meowmatch.com">
-          <img src="icons/email-icon.png" alt="email-icon">
+          <img src="imagesChris/email.logo.png" alt="email-icon">
         </a>
         <span id="footer-nav-spacer">&nbsp;</span>
-        <a href="https://www.facebook.com">
-          <img src="icons/f_logo_RGB-Blue_114.png" alt="facebook-icon">
+        <a href="https://www.facebook.com/HappyCatsOnline/">
+          <img src="imagesChris/facebook.logo.color.corrected.png" alt="facebook-icon">
         </a>
         <span id="footer-nav-spacer">&nbsp;</span>
-        <a href="https://www.instagram.com">
-          <img src="icons/Insta-glyph-logo_May2016.png" alt="instagram-icon">
+        <a href="https://www.instagram.com/explore/tags/meowmatch/">
+          <img src="imagesChris/instagram.logo.color.corrected.png" alt="instagram-icon">
         </a>
         <span id="footer-nav-spacer">&nbsp;</span>
-        <a href="https://www.twitter.com">
-          <img src="icons/Twitter_Social_Icon_Circle_Color.png" alt="twitter-icon">
+        <a href="https://twitter.com/meowmatches">
+          <img src="imagesChris/twitter.logo.png" alt="twitter-icon">
         </a>
         <span id="footer-nav-spacer">&nbsp;</span>
-        <a href="https://www.linkedin.com">
-          <img src="icons/LI-In-Bug.png" alt="linkedin-icon">
+        <a href="https://www.linked.com">
+          <img src="imagesChris/linkedin.logo.png" alt="linkedin-icon">
         </a>
       </nav>
       <h3>MeowMatch&trade; is a registered trademark of M&M Enterprises</h3>
