--- a/matches.html
+++ b/matches.html
@@ -30,23 +30,23 @@
     <footer>
       <nav>
         <a href="mailto: circularfile@meowmatch.com">
-          <img src="icons/email-icon.png" alt="email-icon">
+          <img src="imagesChris/email.icon.png" alt="email-icon">
         </a>
         <span id="footer-nav-spacer">&nbsp;</span>
         <a href="https://www.facebook.com">
-          <img src="icons/f_logo_RGB-Blue_114.png" alt="facebook-icon">
+          <img src="imagesChris/facebook.logo.color.corrected.png" alt="facebook-icon">
         </a>
         <span id="footer-nav-spacer">&nbsp;</span>
         <a href="https://www.instagram.com">
-          <img src="icons/Insta-glyph-logo_May2016.png" alt="instagram-icon">
+          <img src="imagesChris/instagram.logo.png" alt="instagram-icon">
         </a>
         <span id="footer-nav-spacer">&nbsp;</span>
         <a href="https://www.twitter.com">
-          <img src="icons/Twitter_Social_Icon_Circle_Color.png" alt="twitter-icon">
+          <img src="imagesChris/twitter.logo.png" alt="twitter-icon">
         </a>
         <span id="footer-nav-spacer">&nbsp;</span>
         <a href="https://www.linkedin.com">
-          <img src="icons/LI-In-Bug.png" alt="linkedin-icon">
+          <img src="imagesChris/linkedin.logo.png" alt="linkedin-icon">
         </a>
       </nav>
       <h3>MeowMatch&trade; is a registered trademark of M&M Enterprises</h3>
