--- a/index.html
+++ b/index.html
@@ -27,17 +27,17 @@
         <p id="disclaimer">&#42;Number of available matches may vary with available profiles, how much we like you, and the phase of Venus.</p>
       </section>
       <section id="card-match">
-        <div id="left-card" class="card left-presentation">
+        <div id="left-card">
           <div id="left-card-front" class="card-front"></div>
-          <div id="left-card-back" class="card-back">Left Card Back</div>
+          <div id="left-card-back" class="card-back"></div>
         </div>
         <div>
           <button id="match-button">Match</button>
           <button id="non-match-button">Don't Match</button>  
         </div>
-        <div id="right-card" class="card right-presentation">
+        <div id="right-card">
           <div id="right-card-front" class="card-front"></div>
-          <div id="right-card-back" class="card-back">Right Card Back</div>
+          <div id="right-card-back" class="card-back"></div>
         </div>
       </section>
     </main>
@@ -67,6 +67,7 @@
       <h3>&copy; 2020, M&M Enterprises</h3>
     </footer>
   </body>
-  <script src="JS/app.js"></script>
   <script src="JS/cat.js"></script>
+  <script src="JS/app.js"></script>
+  <script src="JS/cats-exec.js"></script>
 </html>
