--- a/matches.html
+++ b/matches.html
@@ -11,7 +11,7 @@
     <header>
       <section>
         <section id="logo">
-          <img src="img/MeowMatch.png" alt="MM-logo">
+          <img src="imagesChris/MeowMatchLogo.png" alt="MM-logo">
         </section>
         <nav class="horizontal-nav">
           <a href="index.html">Home</a>
@@ -22,7 +22,8 @@
     </header>
     <main>
       <section id="matches-title">
-        <h1>All Matches (Oldest On Top)</h1>
+        <h1 id="matchesontop">All Matches </h1>
+        <p id="oldestontop">(Oldest On Top)</p>
       </section>
       <section id="matches-list">
       </section>
@@ -30,7 +31,7 @@
     <footer>
       <nav>
         <a href="mailto: circularfile@meowmatch.com">
-          <img src="imagesChris/email.icon.png" alt="email-icon">
+          <img src="imagesChris/email.logo.png" alt="email-icon">
         </a>
         <span id="footer-nav-spacer">&nbsp;</span>
         <a href="https://www.facebook.com">
@@ -38,7 +39,7 @@
         </a>
         <span id="footer-nav-spacer">&nbsp;</span>
         <a href="https://www.instagram.com">
-          <img src="imagesChris/instagram.logo.png" alt="instagram-icon">
+          <img src="imagesChris/instagram.logo.color.corrected.png" alt="instagram-icon">
         </a>
         <span id="footer-nav-spacer">&nbsp;</span>
         <a href="https://www.twitter.com">
