final css styling, story updating

--- a/aboutus.html
+++ b/aboutus.html
@@ -6,6 +6,16 @@
     <title>Document</title>
     <link rel="stylesheet" href="CSS/reset.css">
     <link rel="stylesheet" href="CSS/style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@500&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="CSS/reset.css">
+    <link rel="stylesheet" href="CSS/style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@300&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@300;900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Anton&family=Nunito:wght@300;900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Bowlby+One+SC&family=Staatliches&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@300;600&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Balsamiq+Sans:ital,wght@1,700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Bungee+Shade&family=Comfortaa:wght@500&family=Gruppo&family=Lilita+One&display=swap" rel="stylesheet">
   </head>
   <body>
     <header>
@@ -128,19 +138,19 @@
           <img src="imagesChris/email.logo.png" alt="email-icon">
         </a>
         <span id="footer-nav-spacer">&nbsp;</span>
-        <a href="https://www.facebook.com">
+        <a href="https://www.facebook.com/HappyCatsOnline/">
           <img src="imagesChris/facebook.logo.color.corrected.png" alt="facebook-icon">
         </a>
         <span id="footer-nav-spacer">&nbsp;</span>
-        <a href="https://www.instagram.com">
+        <a href="https://www.instagram.com/explore/tags/meowmatch/">
           <img src="imagesChris/instagram.logo.color.corrected.png" alt="instagram-icon">
         </a>
         <span id="footer-nav-spacer">&nbsp;</span>
-        <a href="https://www.twitter.com">
+        <a href="https://twitter.com/meowmatches">
           <img src="imagesChris/twitter.logo.png" alt="twitter-icon">
         </a>
         <span id="footer-nav-spacer">&nbsp;</span>
-        <a href="https://www.linkedin.com">
+        <a href="https://www.linkedin.com/cats">
           <img src="imagesChris/linkedin.logo.png" alt="linkedin-icon">
         </a>
       </nav>
