--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MeowMatch</title>
+    <link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="CSS/reset.css">
     <link rel="stylesheet" href="CSS/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@300&display=swap" rel="stylesheet">
@@ -12,6 +13,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Bowlby+One+SC&family=Staatliches&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@300;600&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Balsamiq+Sans:ital,wght@1,700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Bungee+Shade&family=Comfortaa:wght@500&family=Gruppo&family=Lilita+One&display=swap" rel="stylesheet">
   </head>
   <body>
     <header>
@@ -50,27 +52,27 @@
     <footer>
       <nav>
         <a href="mailto: circularfile@meowmatch.com">
-          <img src="imagesChris/email.logo.png" alt="email-icon">
+          <img src="imagesChris/email.logo.png" alt="email-icon" target="_blank" >
         </a>
         <span id="footer-nav-spacer">&nbsp;</span>
-        <a href="https://www.facebook.com/HappyCatsOnline/">
+        <a href="https://www.facebook.com/HappyCatsOnline/" target="_blank" >
           <img src="imagesChris/facebook.logo.color.corrected.png" alt="facebook-icon">
         </a>
         <span id="footer-nav-spacer">&nbsp;</span>
-        <a href="https://www.instagram.com/explore/tags/meowmatch/">
+        <a href="https://www.instagram.com/explore/tags/meowmatch/" target="_blank" >
           <img src="imagesChris/instagram.logo.color.corrected.png" alt="instagram-icon">
         </a>
         <span id="footer-nav-spacer">&nbsp;</span>
-        <a href="https://twitter.com/meowmatches">
+        <a href="https://twitter.com/meowmatches" target="_blank" >
           <img src="imagesChris/twitter.logo.png" alt="twitter-icon">
         </a>
         <span id="footer-nav-spacer">&nbsp;</span>
-        <a href="https://www.linked.com">
+        <a href="https://www.linked.com/cats" target="_blank">
           <img src="imagesChris/linkedin.logo.png" alt="linkedin-icon">
         </a>
       </nav>
       <h3>MeowMatch&trade; is a registered trademark of M&M Enterprises</h3>
-      <h3>&copy; 2020, M&M Enterprises</h3>
+      <h3 id="footerbottom">&copy; 2020, M&M Enterprises</h3>
     </footer>
   </body>
   <script src="JS/cat.js"></script>
