--- a/matches.html
+++ b/matches.html
@@ -3,9 +3,19 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MewoMatch - Matches</title>
+    <title>MeowMatch</title>
     <link rel="stylesheet" href="CSS/reset.css">
     <link rel="stylesheet" href="CSS/style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@500&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="CSS/reset.css">
+    <link rel="stylesheet" href="CSS/style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@300&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@300;900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Anton&family=Nunito:wght@300;900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Bowlby+One+SC&family=Staatliches&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@300;600&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Balsamiq+Sans:ital,wght@1,700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Bungee+Shade&family=Comfortaa:wght@500&family=Gruppo&family=Lilita+One&display=swap" rel="stylesheet">
   </head>
   <body>
     <header>
@@ -30,23 +40,23 @@
     </main>
     <footer>
       <nav>
-        <a href="mailto: circularfile@meowmatch.com">
+        <a href="mailto: circularfile@meowmatch.com" target="_blank">
           <img src="imagesChris/email.logo.png" alt="email-icon">
         </a>
         <span id="footer-nav-spacer">&nbsp;</span>
-        <a href="https://www.facebook.com">
+        <a href="https://www.facebook.com/HappyCatsOnline/" target="_blank" >
           <img src="imagesChris/facebook.logo.color.corrected.png" alt="facebook-icon">
         </a>
         <span id="footer-nav-spacer">&nbsp;</span>
-        <a href="https://www.instagram.com">
+        <a href="https://www.instagram.com/explore/tags/meowmatch/" target="_blank" >
           <img src="imagesChris/instagram.logo.color.corrected.png" alt="instagram-icon">
         </a>
         <span id="footer-nav-spacer">&nbsp;</span>
-        <a href="https://www.twitter.com">
+        <a href="https://twitter.com/meowmatches" target="_blank" >
           <img src="imagesChris/twitter.logo.png" alt="twitter-icon">
         </a>
         <span id="footer-nav-spacer">&nbsp;</span>
-        <a href="https://www.linkedin.com">
+        <a href="https://www.linkedin.com/cats" target="_blank" >
           <img src="imagesChris/linkedin.logo.png" alt="linkedin-icon">
         </a>
       </nav>
