--- a/aboutus.html
+++ b/aboutus.html
@@ -31,7 +31,7 @@
       </section>
     </header>
     <main>
-      <h1 id="about-us-header">The Team Behind<span id="meowmatch"> MeowMatch</span></h1>
+      <h1 id="about-us-header">The Team Behind<br><span id="meowmatch"> MeowMatch</span></h1>
       <section class="bio">
         <h4 id="names"><span id="paul">Paul</span> Rest</h4><span>
         <img id="paulpic" src="imagesChris/BioPhoto-PaulRest.jpg" alt="paul-rest-bio-photo"></span>
