broken links not broken anymore

--- a/matches.html
+++ b/matches.html
@@ -56,7 +56,7 @@
           <img src="imagesChris/twitter.logo.png" alt="twitter-icon">
         </a>
         <span id="footer-nav-spacer">&nbsp;</span>
-        <a href="https://www.linkedin.com/cats" target="_blank" >
+        <a href="https://www.linkedin.com" target="_blank" >
           <img src="imagesChris/linkedin.logo.png" alt="linkedin-icon">
         </a>
       </nav>
