--- a/aboutus.html
+++ b/aboutus.html
@@ -40,31 +40,31 @@
         </p>
         <ul class="bio-links">
           <li>
-            <a href="https://github.com/paulmrest/">
+            <a href="https://github.com/paulmrest/" target="_blank">
               <img src="imagesChris/github.logo.png" alt="github-icon" class="icon-image">
               <span class="social-link-text">GitHub</span>
             </a>
           </li>
           <li>
-            <a href="https://www.linkedin.com/in/paulmichaelrest/">
+            <a href="https://www.linkedin.com/in/paulmichaelrest/" target="_blank">
               <img src="imagesChris/linkedin.logo.png" alt="linkedin-icon" class="icon-image">
               <span class="social-link-text">LinkedIn</span>
             </a>
           </li>
           <li>
-            <a href="https://www.facebook.com/paul.rest.5/">
+            <a href="https://www.facebook.com/paul.rest.5/" target="_blank">
               <img src="imagesChris/facebook.logo.color.corrected.png" alt="facebook-icon" class="icon-image">
               <span class="social-link-text">Facebook</span>
             </a>
           </li>
           <li>
-            <a href="https://twitter.com/vaticdart">
+            <a href="https://twitter.com/vaticdart" target="_blank">
               <img src="imagesChris/twitter.logo.png" alt="github-icon" class="icon-image">
               <span class="social-link-text">Twitter</span>
             </a>
           </li>
           <li>
-            <a href="mailto:paulmrest@gmail.com">
+            <a href="mailto:paulmrest@gmail.com" target="_blank">
               <img src="imagesChris/email.logo.png" alt="email-icon" class="icon-image">
               <span class="social-link-text">Email</span>
             </a>
@@ -79,25 +79,25 @@
         </p>
         <ul class="bio-links">
           <li>
-            <a href="https://github.com/luluse">
+            <a href="https://github.com/luluse" target="_blank">
               <img src="imagesChris/github.logo.png" alt="github-icon" class="icon-image">
               <span class="social-link-text">GitHub</span>
             </a>
           </li>
           <li>
-            <a href="https://www.linkedin.com/in/lulu-sevignon/">
+            <a href="https://www.linkedin.com/in/lulu-sevignon/" target="_blank">
               <img src="imagesChris/linkedin.logo.png" alt="linkedin-icon" class="icon-image">
               <span class="social-link-text">LinkedIn</span>
             </a>
           </li>
           <li>
-            <a href="https://www.facebook.com/ludivine.sevignon">
+            <a href="https://www.facebook.com/ludivine.sevignon" target="_blank">
               <img src="imagesChris/facebook.logo.color.corrected.png" alt="facebook-icon" class="icon-image">
               <span class="social-link-text">Facebook</span>
             </a>
           </li>
           <li>
-            <a href="mailto:ludivine.sevignon@gmail.com">
+            <a href="mailto:ludivine.sevignon@gmail.com" target="_blank">
               <img src="imagesChris/email.logo.png" alt="email-icon" class="icon-image">
               <span class="social-link-text">Email</span>
             </a>
@@ -113,19 +113,19 @@
         <ul class="bio-links">
           
           <li>
-            <a href="https://github.com/christopherhamersly">
+            <a href="https://github.com/christopherhamersly" target="_blank">
               <img src="imagesChris/github.logo.png" alt="github-icon" class="icon-image">
               <span class="social-link-text">GitHub</span>
             </a>
           </li>
           <li>
-            <a href="https://www.linkedin.com/in/christopher-hamersly">
+            <a href="https://www.linkedin.com/in/christopher-hamersly" target="_blank">
               <img src="imagesChris/linkedin.logo.png" alt="linkedin-icon" class="icon-image">
               <span class="social-link-text">LinkedIn</span>
             </a>
           </li>
           <li>
-            <a id="buttonaction" href="mailto:christopherhamersly@gmail.com">
+            <a id="buttonaction" href="mailto:christopherhamersly@gmail.com" target="_blank">
               <img src="imagesChris/email.logo.png" alt="email-icon" class="icon-image">
               <span class="social-link-text">Email</span>
             </a>
@@ -134,23 +134,23 @@
     </main>
     <footer>
       <nav>
-        <a href="mailto: circularfile@meowmatch.com">
+        <a href="mailto: circularfile@meowmatch.com" target="_blank">
           <img src="imagesChris/email.logo.png" alt="email-icon">
         </a>
         <span id="footer-nav-spacer">&nbsp;</span>
-        <a href="https://www.facebook.com/HappyCatsOnline/">
+        <a href="https://www.facebook.com/HappyCatsOnline/" target="_blank">
           <img src="imagesChris/facebook.logo.color.corrected.png" alt="facebook-icon">
         </a>
         <span id="footer-nav-spacer">&nbsp;</span>
-        <a href="https://www.instagram.com/explore/tags/meowmatch/">
+        <a href="https://www.instagram.com/explore/tags/meowmatch/" target="_blank">
           <img src="imagesChris/instagram.logo.color.corrected.png" alt="instagram-icon">
         </a>
         <span id="footer-nav-spacer">&nbsp;</span>
-        <a href="https://twitter.com/meowmatches">
+        <a href="https://twitter.com/meowmatches" target="_blank">
           <img src="imagesChris/twitter.logo.png" alt="twitter-icon">
         </a>
         <span id="footer-nav-spacer">&nbsp;</span>
-        <a href="https://www.linkedin.com/cats">
+        <a href="https://www.linkedin.com" target="_blank">
           <img src="imagesChris/linkedin.logo.png" alt="linkedin-icon">
         </a>
       </nav>
