--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
           <img src="imagesChris/twitter.logo.png" alt="twitter-icon">
         </a>
         <span id="footer-nav-spacer">&nbsp;</span>
-        <a href="https://www.linked.com/cats" target="_blank">
+        <a href="https://www.linkedin.com/cats" target="_blank">
           <img src="imagesChris/linkedin.logo.png" alt="linkedin-icon">
         </a>
       </nav>
